[package]
name = "hyprconf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.50", features = ["derive"] }
lazy_static = "1.5.0"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"], optional = true }
skim = "0.20.5"
skim-tuikit = "0.6.6"

[features]
serde = ["dep:serde"]
